--- a/src/pages/portfolio/projectsData.json
+++ b/src/pages/portfolio/projectsData.json
@@ -1,31 +1,31 @@
 [
   {
-    "title": "Bike Buddy",
-    "image": "./projectImages/bike.png",
-    "description": "I was responsible for the routing functionality of Bike Buddy, an application that helps parents and guardians keep their children safe while cycling. Utilises the Leaflet.js library and TomTom Routing/Reverse Geolocation API's to create an interactive and visually appealing map that allows a user to plot a route, taking into account various factors such as traffic levels, bicycle lanes, and elevation.",
-    "technologies": "Leaflet | jQuery | Bootstrap",
-    "github": "https://github.com/mdyeates/bike-buddy",
-    "deployed": "https://norrinradd8.github.io/bike_buddy/",
+    "title": "Oxy Shop",
+    "image": "./projectImages/oxy.png",
+    "description": "",
+    "technologies": "JavaScript | HTML | CSS",
+    "github": "https://github.com/rubenandiapimetel/rubenandiapimetel.github.io",
+    "deployed": "https://rubenandiapimetel.github.io/",
     "bgcolor": "#f37737",
     "id": "1"
   },
   {
-    "title": "Weather",
-    "image": "./projectImages/weather.png",
-    "technologies": "jQuery | HTML | CSS",
-    "description": " This dashboard uses the OpenWeatherMap API to retrieve detailed weather data, including the city name, date, weather icon, temperature, humidity, and wind speed. The dashboard has a 5-day forecast feature and a search history feature that saves past searches for easy access. It also has a dark/light theme that changes the look of the page based on day or night in the searched location and uses the geolocation API to automatically determine the user's current location and display the weather.",
-    "github": "https://github.com/mdyeates/weather-app",
-    "deployed": "https://mdyeates.github.io/weather-app/",
+    "title": "Images Finder",
+    "image": "./projectImages/finder 1  .png",
+    "technologies": "React.Js  | Redux | CSS ",
+    "description": "",
+    "github": "https://github.com/rubenandiapimetel/images-finder",
+    "deployed": "https://rubenandiapimetel.github.io/images-finder/",
     "bgcolor": "#29cbe0",
     "id": "2"
   },
   {
-    "title": "Team",
+    "title": "PipeX",
     "image": "./projectImages/team.png",
-    "technologies": "JS | Node | Bootstrap | OOP | TTD",
-    "description": "Team Dashboard is a Node command-line application that takes in information about employees to generate a dynamic HTML web page.",
-    "github": "https://github.com/mdyeates/team-dashboard",
-    "deployed": "https://drive.google.com/file/d/1_atUXTM-L9r4NccsrPaaWqPyNu37ftwH/view",
+    "technologies": "C Language",
+    "description": "Programa escrito en C  con los flags -Wall -Werror -Wextra que replica el comportamiento de un pipe en la Shell mediante un pequeño programa",
+    "github": "https://github.com/rubenandiapimetel/pipex",
+    "deployed": "",
     "bgcolor": "#6c4bf4",
     "id": "3"
   },
